fixed css issue of overflow and responsive and overflow text

--- a/frontend/src/components/Profile-info/ProfileInfo.css
+++ b/frontend/src/components/Profile-info/ProfileInfo.css
@@ -1,8 +1,13 @@
 #profile-info-container {
-	width: 400px;
+	width: 100%;
 	height: auto;
 	/*	background-color: red;*/
 	text-align: center;
 	font-size: 1.5rem;
 	color: white;
+	word-wrap: break-word;
+}
+
+.header {
+	font-size: 1.8rem;
 }
