--- a/frontend/src/components/Profile-photo/ProfilePhoto.css
+++ b/frontend/src/components/Profile-photo/ProfilePhoto.css
@@ -1,12 +1,12 @@
 .profile-photo-container {
 	width: 100%;
-	height: 300px;
+	height: 100%;
 	background-color: grey;
 	display: flex;
 	justify-content: center;
 }
 
 .profile-photo-container > img {
-	width: 300px;
-	height: 300px;
+	width: 100%;
+	height: 100%;
 }
