--- a/frontend/src/pages/Admin/Admin.css
+++ b/frontend/src/pages/Admin/Admin.css
@@ -1,84 +1,30 @@
 .admin-container {
+	max-width: 600px;
+	height: auto;
+	margin: auto;
+	display: flex;
+	border: 10px solid red;
+}
+
+.admin-sub-container {
 	width: 100%;
 	height: 100%;
-	background-color: white;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	align-items: center;
-}
-
-.admin-assistant-container {
-	width: 500px;
-	flex: 1;
-	height: auto;
-	height: auto;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
+	background: dimgrey;
 	border: 1px solid black;
-}
-
-.sub-admin-container {
-	/*	max-width: 100%;*/
-	flex: 1;
-	height: 20px;
-	background-color: grey;
-	margin-bottom: 1px;
-}
-
-.editinfo {
-	display: flex;
-	justify-content: flex-end;
-	background-color: pink;
 	padding: 5px;
 }
 
-.showinfo {
-	display: flex;
-	justify-content: center;
-	height: auto;
-	background-color: maroon;
-}
-
-.section {
-	display: flex;
-	justify-content: space-between;
-	background-color: black;
-	color: white;
-	align-items: center;
-	padding: 25px;
-}
-
-.about {
-	display: flex;
-	justify-content: space-between;
-	background-color: grey;
-	align-items: center;
-	padding: 25px;
-}
-
 .editpencil {
-	width: 25px;
-	height: 25px;
+	width: 30px;
+	height: 30px;
 }
 
 .add-button {
-	width: 25px;
-	height: 25px;
+	width: 30px;
+	height: 30px;
 }
 
-.posts {
+.edit {
 	display: flex;
 	justify-content: space-between;
-	background-color: violet;
-	align-items: center;
-	padding: 25px;
-	/*	height: 1000px; */
-}
-
-.editProfilePhoto {
-	display: flex;
-	justify-content: flex-end;
-	padding: 25px;
 }
